--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CS60333</string>
+    <string name="app_name">Schedule</string>
     <string name="notre_dame">Notre Dame IN</string>
     <string name="basketball">Basketball 2017</string>
 </resources>
